ingress-nginx/test-ingress.yml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:

  name: test-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: test.nginx.ingress
    http:
      paths:
        - path: /
          backend:
            serviceName: test-nginx
            servicePort: 80


---
apiVersion: v1
kind: Service
metadata:
  name: test-ingress
spec:
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: 80
      nodePort: 80
      protocol: TCP
    - name: https
      port: 443
      targetPort: 443
      nodePort: 443
      protocol: TCP
  selector:
    app: test-nginx
